pi/iptables-v4
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:INPUT-INTERFACES - [0:0]
:INPUT-PORTS - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -j INPUT-INTERFACES
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -j INPUT-PORTS
-A INPUT -j DROP
-A INPUT-INTERFACES -s 192.168.127.0/24 -i wg0 -j ACCEPT
-A INPUT-INTERFACES -p udp -m udp --dport 51820 -j ACCEPT
-A INPUT-PORTS -p tcp -m tcp --dport 22 -j ACCEPT
COMMIT
